Fix: H3 spacing when below a table

--- a/styles/spacing.css
+++ b/styles/spacing.css
@@ -262,10 +262,6 @@ blockquote :global(*:last-child) {
     margin-bottom: 0;
 }
 
-div.table-wrapper+h3 {
-    margin-top: 0;
-}
-
 article .flex-container+h2 {
     margin-top: 48px;
 }
